[gd_scene load_steps=17 format=3 uid="uid://cbq7qulkwcan0"]

[ext_resource type="Script" uid="uid://c73t4ep6jy6pa" path="res://barbut/barbut_scene.gd" id="1_k86am"]
[ext_resource type="Texture2D" uid="uid://dj300wn6w7ygr" path="res://barbut/barbut assets/diceSceneBackground.png" id="2_p82fw"]
[ext_resource type="Texture2D" uid="uid://dhq2prcfauhxb" path="res://assets/pc thing/pc_0003_Layer-1.png" id="3_6btyb"]
[ext_resource type="Texture2D" uid="uid://dt68ispsnwnq6" path="res://barbut/barbut assets/rollButton.png" id="3_oatmx"]
[ext_resource type="Texture2D" uid="uid://deloq867ewba5" path="res://assets/cards/VICTORY.png" id="5_wnbcr"]
[ext_resource type="Texture2D" uid="uid://du0vysifypkwd" path="res://assets/cards/LOSE.png" id="6_4wbfi"]
[ext_resource type="Texture2D" uid="uid://qqgkd62ssj7p" path="res://assets/cards/DRAW.png" id="7_gnbn5"]
[ext_resource type="Texture2D" uid="uid://b8xiowsfgeiqc" path="res://assets/infoButton.png" id="8_4wbfi"]
[ext_resource type="AudioStream" uid="uid://de6gn43mkvmrt" path="res://assets/sounds/barbut_throw.wav" id="9_gnbn5"]
[ext_resource type="AudioStream" uid="uid://cc363h4btsxer" path="res://assets/sounds/game_win.wav" id="10_govqf"]
[ext_resource type="AudioStream" uid="uid://er40t8rdnean" path="res://assets/sounds/game_lose.mp3" id="11_vts5s"]

[sub_resource type="LabelSettings" id="LabelSettings_1s0nb"]
font_size = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6btyb"]
size = Vector2(1004, 99.4647)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oatmx"]
size = Vector2(1164, 117)

[sub_resource type="CircleShape2D" id="CircleShape2D_gnbn5"]
radius = 24.0

[sub_resource type="LabelSettings" id="LabelSettings_4wbfi"]
font_size = 56
shadow_size = 21
shadow_color = Color(0, 0, 0, 1)

[node name="BarbutScene" type="Node2D"]
script = ExtResource("1_k86am")

[node name="DiceSceneBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_p82fw")

[node name="Bet" type="Node2D" parent="."]
z_index = 300
position = Vector2(-32, 88)

[node name="BetButton" type="Button" parent="Bet"]
z_index = 300
offset_left = -24.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 136.0
icon = ExtResource("3_oatmx")
flat = true
expand_icon = true

[node name="BetSlider" type="VSlider" parent="Bet"]
z_index = 300
offset_left = -48.0
offset_top = -48.0
offset_right = -32.0
offset_bottom = 80.0
step = 5.0

[node name="BetLabel" type="Label" parent="Bet"]
z_index = 300
offset_left = -24.0
offset_top = -16.0
offset_right = 46.0
offset_bottom = 24.0
text = "Bet:"
label_settings = SubResource("LabelSettings_1s0nb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerOrigin" type="Node2D" parent="."]
position = Vector2(200, 168)

[node name="EnemyOrigin" type="Node2D" parent="."]
position = Vector2(-235, -235)

[node name="Overlay" type="Sprite2D" parent="."]
z_index = 400
texture = ExtResource("3_6btyb")

[node name="DiceBounds" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(640, 0)
collision_layer = 2
collision_mask = 2

[node name="EnemyBound" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-328, 256)
rotation = -0.261799
shape = SubResource("RectangleShape2D_6btyb")
one_way_collision_margin = 8.0

[node name="PlayerBound" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-448, -216)
rotation = 3.66519
shape = SubResource("RectangleShape2D_oatmx")
one_way_collision_margin = 7.8

[node name="EnemyBound2" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-1032, 144)
rotation = 0.523598
shape = SubResource("RectangleShape2D_6btyb")
one_way_collision_margin = 8.0

[node name="PlayerBound2" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-904, -168)
rotation = -3.40339
shape = SubResource("RectangleShape2D_oatmx")
one_way_collision = true
one_way_collision_margin = 7.8

[node name="PlayerBound3" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-1112, 32)
rotation = 1.83259
shape = SubResource("RectangleShape2D_oatmx")
one_way_collision_margin = 7.8

[node name="PlayerBound4" type="CollisionShape2D" parent="DiceBounds"]
position = Vector2(-176, 128)
rotation = -1.309
shape = SubResource("RectangleShape2D_oatmx")
one_way_collision_margin = 7.8

[node name="EndingScreens" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, -104)

[node name="Victory" type="Sprite2D" parent="EndingScreens"]
visible = false
texture = ExtResource("5_wnbcr")

[node name="Lose" type="Sprite2D" parent="EndingScreens"]
visible = false
texture = ExtResource("6_4wbfi")

[node name="Draw" type="Sprite2D" parent="EndingScreens"]
visible = false
texture = ExtResource("7_gnbn5")

[node name="InfoButton" type="Area2D" parent="."]
position = Vector2(-416, -120)

[node name="InfoButtonIcon" type="Sprite2D" parent="InfoButton"]
z_index = 530
position = Vector2(-15, -15)
scale = Vector2(1.9375, 1.9375)
texture = ExtResource("8_4wbfi")

[node name="InfoButtonHitbox" type="CollisionShape2D" parent="InfoButton"]
position = Vector2(-16, -16)
shape = SubResource("CircleShape2D_gnbn5")

[node name="InfoYap" type="Label" parent="InfoButton"]
visible = false
z_index = 690
offset_left = 48.0
offset_right = 566.0
offset_bottom = 261.0
text = "You throw dice
Higher dice are better

Yeah thats about it"
label_settings = SubResource("LabelSettings_4wbfi")

[node name="ColorRect" type="ColorRect" parent="InfoButton/InfoYap"]
z_index = -1
layout_mode = 0
offset_left = -8.0
offset_right = 536.0
offset_bottom = 272.0
color = Color(0, 0, 0, 0.839216)

[node name="Audio" type="Node2D" parent="."]

[node name="dice_throw" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_gnbn5")

[node name="win" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_govqf")
volume_db = -10.0

[node name="lose" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("11_vts5s")
volume_db = -10.0

[connection signal="gui_input" from="Bet/BetButton" to="." method="_onBetButtonClick"]
[connection signal="value_changed" from="Bet/BetSlider" to="." method="_onBetSliderChanged"]
[connection signal="mouse_entered" from="InfoButton" to="." method="_onHoverInfo"]
[connection signal="mouse_exited" from="InfoButton" to="." method="_onUnhoverInfo"]
